# OSR_D-D_Helper

./: .gitignore  CLAUDE.md  character_ingester.py  cli.py  config.py  dungeon.py  dungeon_assistant.py  editor_server.py  encounter_simulator.py  journal.py  layout.py  level_scaler.py  main.py  osr_webview_window.py  pyproject.toml  renderer.py  session.py  srd_lookup.py  statblock_parser.py  tactics.py  tracker.py
data/: dungeon_template.json  example_dungeon.json  torrel.json
dungeons/ancient-temple-of-torrel/: dungeon.json
dungeons/ancient-temple-of-torrel/characters/: dorcas.json  leriland.json  malach-dorine.json
dungeons/reliquary-of-whispering-steel/: dungeon.json
render_output/: dm.html  player.html
srd-resources/: Conditions.txt  Magic-items.txt  Miscellaneous-creatures.txt  Monsters.txt  Panteons-and-planes.txt  special-feature-examples.txt
tests/: conftest.py  test_browser_opener.py  test_character_ingester.py  test_dungeon.py  test_dungeon_assistant.py  test_editor_server.py  test_encounter_simulator.py  test_journal.py  test_level_scaler.py  test_main_port_check.py  test_main_scaffold.py  test_renderer.py  test_session.py  test_simulate_room_monsters.py  test_srd_lookup.py  test_statblock_parser.py  test_tactics.py  test_tracker.py
tests/golden/: turn_engine_50turns.txt
