[project]
name = "osr-dungeon-system"
version = "0.1.0"
description = "5E dungeon exploration tracker — DM-side pygame app."
requires-python = ">=3.11"
dependencies = [
    # Used only by character_ingester to extract text from uploaded
    # character-sheet PDFs before handing them to the LLM. The rest of
    # the app (renderer, session, editor, simulator) has no third-party
    # runtime deps beyond pygame, which the user installs out of band.
    "pypdf>=4.0",
]

# The dungeon assistant + character ingester subprocess the local
# `claude` CLI (Claude Code) and ride on its existing subscription auth
# — no separate API key required. Install Claude Code from
# claude.com/download and run `claude login` once if you want to use
# the assistant page or the character-sheet ingester.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
